--- a/mp4cencoder.cbp
+++ b/mp4cencoder.cbp
@@ -14,6 +14,9 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add library="lib/libmp4v2.a" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/mp4cencoder" prefix_auto="1" extension_auto="1" />
@@ -31,6 +34,24 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="MP4Encoder.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="MP4Encoder.h" />
+		<Unit filename="include/mp4v2/chapter.h" />
+		<Unit filename="include/mp4v2/file.h" />
+		<Unit filename="include/mp4v2/file_prop.h" />
+		<Unit filename="include/mp4v2/general.h" />
+		<Unit filename="include/mp4v2/isma.h" />
+		<Unit filename="include/mp4v2/itmf_generic.h" />
+		<Unit filename="include/mp4v2/itmf_tags.h" />
+		<Unit filename="include/mp4v2/mp4v2.h" />
+		<Unit filename="include/mp4v2/platform.h" />
+		<Unit filename="include/mp4v2/project.h" />
+		<Unit filename="include/mp4v2/sample.h" />
+		<Unit filename="include/mp4v2/streaming.h" />
+		<Unit filename="include/mp4v2/track.h" />
+		<Unit filename="include/mp4v2/track_prop.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
